compiler/test-data/parser/theme/errors/asset_with_init.frel
module test

theme AppTheme {
    primaryColor : asset Color = #FF0000
}
